opam-version: "2.0"

maintainer: ["Geoff Hulette <geoff@hulette.net>"]
authors: ["Arjun Guha, Geoff Hulette <geoff@hulette.net>"]
homepage: "https://github.com/ghulette/ocaml-smtlib"
bug-reports: "https://github.com/ghulette/ocaml-smtlib/issues"
dev-repo: "git+https://github.com/ghulette/ocaml-smtlib.git"
license: "MIT"

synopsis:
  "A simple OCaml API for building/parsing SMTLIB2 expressions and interacting with some popular SMT solvers"

description: """
A simple OCaml API for building/parsing SMTLIB2 expressions and interacting with some popular SMT solvers.

Based on ocaml-z3, with added support for additional SMT solvers.
"""

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "@doc"] {with-doc}
]

depends: [
  "dune" {>= "1.10"}
  "ocaml" {>= "4.02.3"}
  "base-unix"
]
